styles/custom.css
/* ---------------Misc design */
.top {
  margin-top: 5rem; }

.tight.top.heading {
  margin-top: 1rem;
  margin-bottom: 1rem; }

.container {
  max-width: 800px; }

@media (max-width: 450px) {
  .tight.container {
    width: 95%;
    padding: 0; }
}

/* ---------------Search form */
.latlon {
  max-width: 90%; }

.time {
  width: 42px; }

.row-button {
  padding-top: 3rem; }

.form.row {
  max-width: 400px; }

input[type="date"] {
  height: 38px;
  padding: 6px 0px;
  border: 1px solid #D1D1D1;
  border-radius: 4px;
  box-sizing: border-box;
}

@media (max-width: 450px) {
  input[type="date"] {
    font-size: 0.9em; }
}


/* ----------------------- Help Popup */

.popup {
  position: relative;
  display: inline-block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* The actual popup */
.popup .popuptext {
  visibility: hidden;
  width: 160px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 8px 0;
  position: absolute;
  z-index: 1;
  top: 115%;
  left: 50%;
  margin-left: -80px;
}

.first.popuptext {
  left: 100%;
}

.last.popuptext {
  left: 0%;
}

/* Popup arrow */
.popup .popuptext::after {
  content: "";
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #555 transparent;
}

.first.popuptext::after {
  left: 35%;
}

.last.popuptext::after {
  left: 70%;
}

.pop.material-symbols-outlined {
  font-size: medium;
}

/* Toggle this class - hide and show the popup */
.popup .show {
  visibility: visible;
}


/* -------------- Satellite results table */
.viztable td, th {
  text-align: center;
  border-top: 1px solid #E1E1E1;
  border-bottom: 1px solid #E1E1E1;
  border-left: 1px solid #E1E1E1;
  border-right: 1px solid #E1E1E1;
  padding-left: 15px;
  padding-right: 15px; }

.viztable th:first-child, th:last-child {
  padding-right: 15px; }

.smallbutton {
  background-color: #89f56c;
  height: 30px;
  line-height: 30px;
  padding: 0 6px; }

.bigbutton {
  background-color: #8cbde6; }

.maxbutton {
  background-color: #e6b58c;
  height: 100%;
  width: 100%;
  margin: 0; }

#angletable {
  width: 90%; /* initial width before viztable is populated */
  font-size: 1.2em; }

#buttoncell {
  padding: 0;
  height: 6rem;
  width: 40%; }

#elevationcell, #azimuthcell {
  width: 30%; }


.yes-sun-cell {
  /*background-color: #7df04f; }*/
  background-color: #f9e79f; }

.no-sun-cell {
  /*background-color: #ed7864; }*/
  background-color: #cccccc; }


/* -------------- Top Navigation Menu */
.navcontainer {
  margin: 0 0;
  z-index: 99; }
  
  /* Navbar */
  .navbar + .docs-section {
    border-top-width: 0; }
  .navbar,
  .navbar-spacer {
    display: block;
    width: 100%;
    height: 4rem;
    background: #fff;
    z-index: 99;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee; }
  .navbar-spacer {
    display: none; }
  .navbar > .container {
    width: 100%; }
  .navbar-list {
    list-style: none;
    margin-bottom: 0; }
  .navbar-item {
    position: relative;
    float: left;
    margin-bottom: 0;
    margin-left: 2rem; }
  .navbar-link {
    text-transform: uppercase;
    font-size: 11px;
    font-weight: 600;
    letter-spacing: .2rem;
    margin-right: 30px;
    text-decoration: none;
    line-height: 4.0rem;
    color: #222; }
  @media (min-width: 390px) {
    .navbar-link {
      margin-right: 35px;
    }
  }
  .navbar-link.active {
    color: #33C3F0; }
  .has-docked-nav .navbar {
    position: fixed;
    top: 0;
    left: 0; }
  .has-docked-nav .navbar-spacer {
    display: block; }
  /* Re-overiding the width 100% declaration to match size of % based container */
  .has-docked-nav .navbar > .container {
    width: 80%; }

  /* Popover */
  .popover.open {
    display: block;
  }
  .popover {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    background: #fff;
    border: 1px solid #eee;
    border-radius: 4px;
    top: 92%;
    left: -25%;
    -webkit-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
       -moz-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
            filter: drop-shadow(0 0 6px rgba(0,0,0,.1)); }
  .popover-item:first-child .popover-link:after, 
  .popover-item:first-child .popover-link:before {
    bottom: 100%;
    left: 50%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none; }
  .popover-item:first-child .popover-link:after {
    border-color: rgba(255, 255, 255, 0);
    border-bottom-color: #fff;
    border-width: 10px;
    margin-left: -10px; }
  .popover-item:first-child .popover-link:before {
    border-color: rgba(238, 238, 238, 0);
    border-bottom-color: #eee;
    border-width: 11px;
    margin-left: -11px; }
  .popover-list {
    padding: 0;
    margin: 0;
    list-style: none; }
  .popover-item {
    padding: 0;
    margin: 0; }
  .popover-link {
    position: relative;
    color: #222;
    display: block;
    padding: 8px 20px;
    border-bottom: 1px solid #eee;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 1.0rem;
    font-weight: 600;
    text-align: center;
    letter-spacing: .1rem; }
  .popover-item:first-child .popover-link {
    border-radius: 4px 4px 0 0; }
  .popover-item:last-child .popover-link {
    border-radius: 0 0 4px 4px;
    border-bottom-width: 0; }
  .popover-link:hover {
    color: #fff;
    background: #33C3F0; }
  .popover-link:hover,
  .popover-item:first-child .popover-link:hover:after {
    border-bottom-color: #33C3F0; }

@media (min-width: 550px) {
  /* Navbar */
  .navbar, .navbar-spacer {
    height: 6.5rem; }
  .navbar-link {
    line-height: 6.5rem; } 
}

/* ----------- Custom grid on small devices */
@media (min-width: 350px) {
  .column,
  .columns {
    margin-left: 4%; }
  .column:first-child,
  .columns:first-child {
    margin-left: 0; }

  .one.column,
  .one.columns                    { width: 4.66666666667%; }
  .two.columns                    { width: 13.3333333333%; }
  .three.columns                  { width: 22%;            }
  .four.columns                   { width: 30.6666666667%; }
  .fourhalf.columns               { width: 35%;            }
  .five.columns                   { width: 39.3333333333%; }
  .fivehalf.columns               { width: 43.6666666667%; }
  .six.columns                    { width: 48%;            }
  .seven.columns                  { width: 56.6666666667%; }
  .eight.columns                  { width: 65.3333333333%; }
  .nine.columns                   { width: 74.0%;          }
  .ten.columns                    { width: 82.6666666667%; }
  .eleven.columns                 { width: 91.3333333333%; }
  .twelve.columns                 { width: 100%; margin-left: 0; }

  .one-third.column               { width: 30.6666666667%; }
  .two-thirds.column              { width: 65.3333333333%; }

  .one-half.column                { width: 48%; }
}

